# hal_realtek

./: CMakeLists.txt  Kconfig  README.rst
ameba/: .gitignore  CMakeLists.txt  Kconfig
ameba/amebad/: CMakeLists.txt  Kconfig  ameba_layout.ld  manifest.json5
ameba/amebad/include/: platform_autoconf.h
ameba/amebad/ld/: ameba_rom_symbol_acut.ld  ameba_rom_symbol_acut_s.ld
ameba/amebad/source/app/monitor/include/: monitor_rom.h  shell.h
ameba/amebad/source/cmsis/: core_cm33_km4.h
ameba/amebad/source/fwlib/include/: ameba.h  ameba_adc.h  ameba_audio.h  ameba_backup_reg.h  ameba_boot.h  ameba_bor.h  ameba_captouch.h  ameba_chipinfo.h  ameba_clk.h  ameba_comparator.h  ameba_crc.h  ameba_crypto.h  ameba_crypto_api.h  ameba_deepsleep.h  ameba_delay.h  ameba_efuse.h  ameba_flash.h  ameba_flashclk.h  ameba_gdma.h  ameba_gpio.h  ameba_i2c.h  ameba_i2s.h  ameba_inic.h  ameba_ipc.h  ameba_ipc_api.h  ameba_ir.h  ameba_keyscan.h  ameba_km4.h  ameba_lcdc.h  ameba_loguart.h  ameba_ota.h  ameba_otf.h  ameba_peri_on.h  ameba_pinmap.h  ameba_pinmux.h  ameba_pmc.h  ameba_psram.h  ameba_qdec.h  ameba_ram_libc.h  ameba_rcc_hp.h  (+32 more)
ameba/amebad/source/fwlib/ram_common/: ameba_adc.c  ameba_arch.c  ameba_bor.c  ameba_captouch.c  ameba_comparator.c  ameba_efuse.c  ameba_fault_handle.c  ameba_flash_ram.c  ameba_gdma_memcpy.c  ameba_gdma_ram.c  ameba_gpio.c  ameba_i2c.c  ameba_ipc_api.c  ameba_ir.c  ameba_keyscan.c  ameba_pll.c  ameba_qdec.c  ameba_ram_libc.c  ameba_rand2.c  ameba_reset.c  ameba_rtc.c  ameba_sgpio.c  ameba_tim.c  ameba_uart.c  ameba_wdg.c
ameba/amebad/source/fwlib/ram_hp/: ameba_app_start.c  ameba_audio.c  ameba_clk.c  ameba_cpft.c  ameba_i2s.c  ameba_lcdc.c  ameba_ota_ram.c  ameba_pmc.c  ameba_pmc_ram.c  ameba_psram.c  ameba_sd.c  ameba_sdio.c  ameba_sdio_host.c  ameba_ssi.c  ameba_system.c  ameba_usb.c  ameba_usi_i2c.c  ameba_usi_ssi.c  ameba_usi_uart.c
ameba/amebad/source/lib/chipinfo/: ameba_chipinfo_lib.c  ameba_rand2.c  ameba_rom_patch.c  ameba_rom_patch.h
ameba/amebad/source/lib/ram_common/: ameba_chipinfo_lib.c  ameba_rom_patch.c
ameba/amebad/source/misc/: ameba_pmu.h
ameba/amebad/source/swlib/: diag.h  gcc_wrap.c  log.c  memproc.h  rand.c  rand.h  strproc.h
ameba/amebad/source/usrcfg/: ameba_ipccfg.c
ameba/amebad/source/usrcfg/include/: ameba_flashcfg.h  ameba_userheapcfg.h  ameba_usrcfg.h  ameba_wificfg.h
ameba/amebadplus/: CMakeLists.txt  Kconfig
ameba/amebadplus/include/: platform_autoconf.h
ameba/amebadplus/ld/: ameba_rom_symbol_acut_s.ld  ameba_rom_symbol_stdlib.ld
ameba/amebadplus/source/fwlib/include/: ameba.h  ameba_cache.h  ameba_clk.h  ameba_ota.h  ameba_soc.h  ameba_ups.h  mpu_config.h
ameba/amebadplus/source/swlib/: gcc_wrap.c  log.c  memproc.h
ameba/common/include/: rtk_compiler.h
ameba/scripts/: merge_bin.py  update_blobs.py
ameba/usrcfg/: CMakeLists.txt
ameba/usrcfg/amebad/: CMakeLists.txt  ameba_ipccfg.c
ameba/usrcfg/amebad/include/: ameba_flashcfg.h  ameba_usrcfg.h
zephyr/: module.yml
(+10 files in other folders)
