#zephyr_link_libraries_ifdef(CONFIG_WIFI_AMEBA ${CMAKE_CURRENT_SOURCE_DIR}/lib/lib_wifi_single_core.a)
#zephyr_link_libraries_ifdef(CONFIG_WIFI_AMEBA ${CMAKE_CURRENT_SOURCE_DIR}/lib/lib_wifi_api_km4.a)
#zephyr_link_libraries_ifdef(CONFIG_WIFI_AMEBA ${CMAKE_CURRENT_SOURCE_DIR}/lib/lib_wpa_lite.a)
#zephyr_link_libraries_ifdef(CONFIG_WIFI_AMEBA ${CMAKE_CURRENT_SOURCE_DIR}/lib/lib_wifi_com_sec.a)
#zephyr_link_libraries_ifdef(CONFIG_WIFI_AMEBA ${CMAKE_CURRENT_SOURCE_DIR}/lib/lib_coex_api.a)
#zephyr_link_libraries_ifdef(CONFIG_WIFI_AMEBA ${CMAKE_CURRENT_SOURCE_DIR}/lib/lib_coex.a)

set(WIFI_DRV_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib/lib_wifi_single_core.a")
set(WIFI_WPA_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib/lib_wpa_lite.a")
set(WIFI_SEC_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib/lib_wifi_com_sec.a")
set(WIFI_API_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib/lib_wifi_api.a")

add_library(wifi_libs INTERFACE)
target_link_libraries(wifi_libs INTERFACE ${WIFI_DRV_PATH} ${WIFI_API_PATH} ${WIFI_WPA_PATH} ${WIFI_SEC_PATH})
target_link_libraries(app PRIVATE wifi_libs)

zephyr_compile_options(-mcmse)

zephyr_include_directories(include)
zephyr_include_directories(source/cmsis)
zephyr_include_directories(source/misc)
zephyr_include_directories(source/swlib)
zephyr_include_directories(source/lib/include)
zephyr_include_directories(source/fwlib/include)
zephyr_include_directories(source/usrcfg/include)
zephyr_include_directories(source/app/monitor/include)

# used by common
zephyr_library_sources(source/fwlib/ram_hp/ameba_system.c)
zephyr_library_sources(source/usrcfg/ameba_ipccfg.c)
zephyr_library_sources(source/fwlib/ram_common/ameba_ipc_api.c)
zephyr_library_sources(source/fwlib/ram_common/ameba_arch.c)
zephyr_library_sources(source/swlib/log.c)
zephyr_library_sources(source/lib/ram_common/ameba_rom_patch.c)

# used by driver, need use zephyr_library_sources_ifdef
zephyr_library_sources_ifdef(CONFIG_ENTROPY_AMEBA_TRNG source/fwlib/ram_common/ameba_rand2.c)
zephyr_library_sources_ifdef(CONFIG_ADC_AMEBA source/fwlib/ram_common/ameba_adc.c)
zephyr_library_sources_ifdef(CONFIG_SOC_FLASH_AMEBA source/fwlib/ram_common/ameba_flash_ram.c)
zephyr_library_sources_ifdef(CONFIG_DMA_AMEBA source/fwlib/ram_common/ameba_gdma_ram.c)
zephyr_library_sources_ifdef(CONFIG_I2C_AMEBA source/fwlib/ram_common/ameba_i2c.c)
zephyr_library_sources_ifdef(CONFIG_RTC_AMEBA source/fwlib/ram_common/ameba_rtc.c)
zephyr_library_sources_ifdef(CONFIG_SPI_AMEBA source/fwlib/ram_hp/ameba_ssi.c)
zephyr_library_sources_ifdef(CONFIG_COUNTER_TMR_AMEBA source/fwlib/ram_common/ameba_tim.c)
zephyr_library_sources_ifdef(CONFIG_UART_AMEBA source/fwlib/ram_common/ameba_uart.c)
zephyr_library_sources_ifdef(CONFIG_WDT_AMEBA source/fwlib/ram_common/ameba_wdg.c)
zephyr_library_sources_ifdef(CONFIG_WIFI_AMEBA source/misc/ameba_freertos_pmu.c)
zephyr_library_sources_ifdef(CONFIG_WIFI_AMEBA source/swlib/sscanf_minimal.c)
